--- a/export_options.plist
+++ b/export_options.plist
@@ -5,6 +5,6 @@
     <key>method</key>
     <string>ad-hoc</string>
     <key>teamID</key>
-    <string>8JCCYX4K57</string>
+    <string></string>
 </dict>
 </plist>
